--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,17 +1,25 @@
 @font-face {
-    font-family: 'Roboto';
-    src: local('Roboto'), url(~@/assets/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
+  font-family: "Roboto";
+  src: local("Roboto"),
+    url(~@/assets/fonts/Roboto/Roboto-Regular.ttf) format("truetype");
 }
 
 body {
-    margin: 0;
-	background-color: #FBFBFB;
+  margin: 0;
+  background-color: #fbfbfb;
 
-    h1, h2, h3, h4, h5, h6, p, a, span {
-        font-family: Roboto;
-        text-decoration: none;
-        margin: 0;
-        padding: 0;
-    }
-    
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  a,
+  span {
+    font-family: Roboto;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+  }
 }
